--- a/buttonJS.html
+++ b/buttonJS.html
@@ -20,7 +20,7 @@
             <div class="content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
-            <button onclick="toggleDay(),nightmode()">Toggle Day/Night Mode</button>
+            <button onclick="toggleDay()">Toggle Day/Night Mode</button>
         </section>
 
         <section id="bb3" class="bigbox">
@@ -83,19 +83,11 @@
         let section = doc.querySelector('#bb2');
         let subtitle = doc.querySelector('#bb2 > h3');
         let para = doc.querySelector('#bb2 > div > p');
-        section.style.backgroundColor= '#ffffff';
-            subtitle.style.color= '#000000';
-            para.style.color= '#000000';
+        section.classList.toggle("nightmode");
+        subtitle.classList.toggle('nightmode');
+        para.classList.toggle('nightmode');
         }
-        function nightmode(){
-            const doc = document;
-        let section = doc.querySelector('#bb2');
-        let subtitle = doc.querySelector('#bb2 > h3');
-        let para = doc.querySelector('#bb2 > div > p');
-        section.style.backgroundColor= '#000000';
-            subtitle.style.color= '#ffffff';
-            para.style.color= '#ffffff';
-        }
+
         //function 2
 
         //function 3
