--- a/buttonJS.html
+++ b/buttonJS.html
@@ -61,8 +61,8 @@
                 <span>20</span>
             </div>
             <br>
-            <button onclick="">+1</button>
-            <button onclick="">+10</button>
+            <button onclick="plusOne()">+1</button>
+            <button onclick="plusTen()">+10</button>
         </section>
     </body>
     <script type="text/javascript">
@@ -94,6 +94,15 @@
 
         //function 4
 
-        //function 5 & 6
+        function plusOne(){
+            let v = doc.querySelector('#bb5 > div > content');
+            if (v.clicked.plusOne == true){
+                v++;
+            }
+
+        }
+        function plusTen(){
+
+        }//function 5 & 6
     </script>
 </html>
